<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="20dp"
                android:textColor="#464646"
                android:text="@string/sign_in_title"/>

            <View
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_height="1px"
                android:background="#464646"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sign_edit_username"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:textSize="15dp"
                    android:textColorHint="#b4b4b4"
                    android:hint="@string/sign_in_username_hint"
                    android:background="@drawable/rounded_edit_style"/>

                <EditText
                    android:id="@+id/sign_edit_password"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:inputType="textPassword"
                    android:textSize="15dp"
                    android:textColorHint="#b4b4b4"
                    android:hint="@string/sign_in_password_hint"
                    android:background="@drawable/rounded_edit_style"/>

                <RelativeLayout
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_width="300dp"
                    android:layout_height="40dp">


                    <TextView
                        android:id="@+id/sign_btn_sign"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="#8e8e8e"
                        android:textSize="15dp"
                        android:text="@string/sign_in_button"
                        android:background="@drawable/sign_rounded_sign_button_gray"/>

                    <com.ant.liao.GifView
                        android:visibility="gone"
                        android:id="@+id/sign_button_loading"
                        android:layout_centerInParent="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        />
                </RelativeLayout>


                <LinearLayout
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_width="250dp"
                    android:layout_height="30dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <CheckBox
                            android:id="@+id/sign_checkbox_save_pwd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/sign_in_checkbox"/>

                        <TextView
                            android:id="@+id/sign_forget_tex"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_in_forget_password"/>

                    </RelativeLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/sign_new_user_tex"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_new_user"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>