<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="220dp"
        android:background="@drawable/rounded_button_style"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">
            <TextView
                android:id="@+id/setting_dialog_prompt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dip"
                android:textColor="@color/dialog_Text_Color"
                android:text="@string/Setting_Dialog_Prompt_Title"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/setting_dialog_prompt_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dialog_Text_Color"
                android:textSize="20dip"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/Setting_Dialog_Prompt_Text"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/setting_dialog_prompt_ok_button"
                android:textColor="@color/button_Text_Color"
                android:text="@string/OK"
                android:textSize="18dip"
                android:layout_centerHorizontal="true"
                android:layout_width="240dp"
                android:background="@color/dialog_Button_Back_Color"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>